--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Minesweeper</title>
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
-    <body>
+    <body onload="init()">
         <table>
             <tbody class="game-board"></tbody>
         </table>
