--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Minesweeper</title>
-        <link rel="stylesheet" href="css/stylesheet.css">
-    </head>
-    <body onload="init()">
-        <table>
-            <tbody class="game-board"></tbody>
-        </table>
-        <script src="js/utils.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Minesweeper</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+</head>
+
+<body onload="init()">
+    <div class="level-options">
+        <h3>How bad do you want it?</h3>
+        <button id="easy" onclick="chooseLevel(this.id)">Easy</button>
+        <button id="medium" onclick="chooseLevel(this.id)">Intermediate</button>
+        <button id="hard" onclick="chooseLevel(this.id)">Hard</button>
+    </div>
+    <!-- <div class="timer-clock">
+        <h2><span id="mins">00</span>:<span id="secs">00</span></h2>
+    </div> -->
+    <table>
+        <tbody class="game-board"></tbody>
+    </table>
+    <h1 class="lose">☠️ Oh No! You've Lost! ☠️</h1>
+    <h1 class="win">🎉 Hurray! You've Won 🎉</h1>
+    <script src="js/utils.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
