--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="init()">
+    <h1>Minesweeper</h1>
     <div class="level-options">
         <h3>How bad do you want it?</h3>
         <button id="easy" onclick="chooseLevel(this.id)">Easy</button>
