--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button id="medium" onclick="chooseLevel(this.id)">Intermediate</button>
         <button id="hard" onclick="chooseLevel(this.id)">Hard</button>
     </div>
-    <!-- <div class="timer-clock">
+    <h2 class="timer">00:00</h2>
+    <!-- <div class="timer">
         <h2><span id="mins">00</span>:<span id="secs">00</span></h2>
     </div> -->
     <table>
